# cosyvoice3-onnx

./: .gitignore  README.md  main.py  pyproject.toml
configs/: cosyvoice_zh_quality.json
docs/: usage.md
pretrained_models/Fun-CosyVoice3-0.5B/onnx/: .gitattributes  README.md  merges.txt  vocab.json
pretrained_models/Fun-CosyVoice3-0.5B/onnx/scripts/: onnx_inference_pure.py
prompts/: voices.json
